Added favicon  and updated modified files and deleted App.css file

--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="A simple and elegant to-do list app built with React and Tailwind CSS." />
+    <meta name="keywords" content="To-Do, React, Tailwind CSS, Vite, Task Manager" />
+    <meta name="author" content="Praveen Mishra" />
+    <title>To-Do List App</title>
   </head>
   <body>
     <div id="root"></div>
